--- a/src/views/cliente_edit.ejs
+++ b/src/views/cliente_edit.ejs
@@ -7,7 +7,7 @@
         <div class="col-md-5">
             <div class="card">
                 <div class="card body">
-                        <form action="/update/<%= data.id %>" method="POST" >
+                        <form action="<%= data.id %>" method="POST" >
                             <div class="form-group">
                             <input type="text" name="nombre" value="<%= data.nombre %>" class="form-control">
                                </div> 
