--- a/src/views/clientes.ejs
+++ b/src/views/clientes.ejs
@@ -34,7 +34,7 @@
          </table>   
      </div>
       <div class="col-md-5">   
-         <div class="card">
+         <div class="card" style="margin-left: 68px;">
             <div class="card-body">
                     <form action="/clientes/add" method="POST" >
                         <div class="form-group">
