--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -13,7 +13,7 @@
             </form>
             <style>
     body {
-        background-image : url(images/slide.jpg);
+        background-image : url(images/1796.jpg);
         background-size: cover;
     }
 </style>
