--- a/src/views/partials/_header.ejs
+++ b/src/views/partials/_header.ejs
@@ -9,5 +9,6 @@
 </head>
 <body>
     <nav class="navbar navbar-dark bg-dark">
-        <a href=""class="navbar-brand">Clientes</a> 
+        <a href=""class="navbar-brand">Area Clientes</a>
+        <a href = "/logout" class = 'btn btn-success pull-right'>Cerrar Sesion</a>
     </nav>
