--- a/src/views/partials/_headerlogin.ejs
+++ b/src/views/partials/_headerlogin.ejs
@@ -9,5 +9,8 @@
 </head>
 <body>
     <nav class="navbar navbar-dark bg-dark">
-        <a href=""class="navbar-brand">Login</a> 
+        <a href=""class="navbar-brand">Ingreso al area de Clientes</a>
+        <div class="alert alert-primary pull-right" role="alert" >
+            Bienvenido
+          </div> 
     </nav>
